--- a/dice.html
+++ b/dice.html
@@ -4,8 +4,8 @@
     <mata charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="ludo.css" />
-    <script src="ludo.js" defer></script>
+    <link rel="stylesheet" href="dice.css" />
+    <script src="dice.js" defer></script>
     <title>Dice Game</title>
 </head>
 <body>
